--- a/projects/furnishcrafts/backend/package.json
+++ b/projects/furnishcrafts/backend/package.json
@@ -5,16 +5,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "start": "node src/server.js",
-  "devStart": "nodemon src/server.js",
-  "test": "echo \"Error: no test specified\" && exit 1"
-},
+    "start": "node src/server.js",
+    "devStart": "nodemon src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/krepi/node-course.git"
   },
   "private": true,
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
