--- a/projects/furnishcrafts/docker-compose.yaml
+++ b/projects/furnishcrafts/docker-compose.yaml
@@ -1,39 +1,37 @@
-version: '3.8'
+version: '3'  # Specifies the version of Docker Compose file format
 
 services:
-  frontend:
-    build:
-      context: ./frontend
-    ports:
-      - "3000:80"
-    depends_on:
-      - backend
-    environment:
-      - REACT_APP_API_URL=http://localhost:5000/api
+#  frontend:
+#    build:
+#      context: ./frontend  # Builds the frontend service from the specified directory
+#    ports:
+#      - "3000:3000"  # Maps port 3000 of the container to port 3000 on the host
+#    depends_on:
+#      - backend  # Ensures the backend service starts before the frontend service
 
   backend:
     build:
-      context: ./backend
+      context: ./backend  # Builds the backend service from the specified directory
     ports:
-      - "5000:5000"
+      - "3001:3000"  # Maps port 3000 of the container to port 3001 on the host
+    volumes:
+      - ./backend:/app  # Mounts the backend source code into the container at /app
+      - /app/node_modules  # Prevents overwriting the node_modules directory in the container
     depends_on:
-      - database
+      - database  # Ensures the database service starts before the backend service
     env_file:
-      - .env
+      - ./backend/.env  # Specifies the .env file for environment variables for the backend service
+    command: ["npm", "run", "devStart"]  # Uses nodemon to start the backend and watch for code changes
 
   database:
-    image: postgres:13
+    image: postgres:13  # Uses the official PostgreSQL image, version 13
     ports:
-      - "5432:5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
-    env_file:
-      - .env
+      - "5433:5432"  # Maps port 5432 of the container (default PostgreSQL port) to port 5433 on the host
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-
-volumes:
-  pgdata:
+      POSTGRES_USER: ${DB_MAIN_USER}  # Sets the PostgreSQL user, sourced from the .env file
+      POSTGRES_PASSWORD: ${DB_MAIN_PASSWORD}  # Sets the PostgreSQL user password, sourced from the .env file
+      POSTGRES_DB: ${DB_MAIN_NAME}  # Sets the default database name, sourced from the .env file
+    volumes:
+      - ./database/schema.sql:/docker-entrypoint-initdb.d/schema.sql  # Initializes the database with the schema.sql script
+    env_file:
+      - ./.env  # Specifies the .env file for environment variables for the database service
